# MiaoVideoCutter

./: .gitignore  README.md
3rdpartSrc/ffmpeg_android/armv7-a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
MiaoVideoCutterAndroid/: settings.gradle
MiaoVideoCutterAndroid/app/: build.gradle
MiaoVideoCutterAndroid/app/src/androidTest/java/com/redknot/miaovideocutter/: ExampleInstrumentedTest.java
MiaoVideoCutterAndroid/app/src/main/: AndroidManifest.xml
MiaoVideoCutterAndroid/app/src/main/java/com/redknot/miaovideocutter/: FilterActivity.java  MainActivity.java  MenuActivity.java
MiaoVideoCutterAndroid/app/src/main/java/com/redknot/miaovideocutter/app/: FilterActivity.java  MainActivity.java  MenuActivity.java
MiaoVideoCutterAndroid/app/src/main/res/layout/: activity_filter.xml  activity_main.xml  activity_menu.xml
MiaoVideoCutterAndroid/app/src/main/res/values/: strings.xml
MiaoVideoCutterAndroid/gradle/wrapper/: gradle-wrapper.properties
MiaoVideoCutterAndroid/miao_video_cutter/: build.gradle
MiaoVideoCutterAndroid/miao_video_cutter/src/androidTest/java/com/redknot/miaovideocutter/: ExampleInstrumentedTest.java
MiaoVideoCutterAndroid/miao_video_cutter/src/main/: AndroidManifest.xml
MiaoVideoCutterAndroid/miao_video_cutter/src/main/java/com/redknot/miaovideocutter/constant/: Constant.java
MiaoVideoCutterAndroid/miao_video_cutter/src/main/java/com/redknot/miaovideocutter/format/: VideoFormatSession.java
MiaoVideoCutterAndroid/miao_video_cutter/src/main/java/com/redknot/miaovideocutter/jni/: MiaoVideoCutterJNI.java
MiaoVideoCutterAndroid/miao_video_cutter/src/main/java/com/redknot/miaovideocutter/view/: TimelineView.java
MiaoVideoCutterAndroid/miao_video_cutter/src/main/java/com/redknot/miaovideocutter/view/adapter/: TimelineAdapter.java
MiaoVideoCutterAndroid/miao_video_cutter/src/main/java/com/redknot/miaovideocutter/view/bean/: FrameBean.java
MiaoVideoCutterAndroid/miao_video_cutter/src/main/res/layout/: miaovideocutter_timeline_adapter_frame.xml  miaovideocutter_timeline_view.xml
MiaoVideoCutterAndroid/miao_video_cutter/src/main/res/values/: strings.xml
MiaoVideoCutterAndroid/miao_video_cutter/src/test/java/com/redknot/miaovideocutter/: ExampleUnitTest.java
MiaoVideoCutterCore/: CMakeLists.txt
MiaoVideoCutterCore/Android/: CMakeLists.txt  JniInterface.cpp  JniUtil.cpp  JniUtil.hpp  VideoFormatSessionJni.cpp  VideoFormatSessionYuvFrameJni.cpp  YuvSet.cpp  YuvSet.hpp  com_redknot_miaovideocutter_jni_MiaoVideoCutterJNI.h
MiaoVideoCutterCore/MiaoBase/: CMakeLists.txt  Miao.cpp  Miao.hpp  MiaoDebug.cpp  MiaoDebug.hpp
MiaoVideoCutterCore/MiaoSwscale/: CMakeLists.txt  MiaoSwscale.cpp  MiaoSwscale.hpp
MiaoVideoCutterCore/MiaoVideoCodec/: CMakeLists.txt  MiaoVideoCodec.cpp  MiaoVideoCodec.hpp  MiaoVideoDecoder.cpp
MiaoVideoCutterCore/MiaoVideoFormat/: CMakeLists.txt  H264Extradata.cpp  MiaoAVLoader.cpp  MiaoExtradata.cpp  MiaoExtradata.hpp  MiaoExtradataFactory.cpp  MiaoFormatIO.cpp  MiaoFormatInput.cpp  MiaoFormatOutput.cpp  MiaoVideoFormat.hpp  MiaoVideoFragment.cpp
MiaoVideoCutterCore/Test/: CMakeLists.txt  VideoFragment.cpp  main.cpp
