PROJECT(MIAO_VIDEO_CUTTER_CORE)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    MESSAGE(STATUS "current platform: Linux ")
    ADD_DEFINITIONS(-D__LINUX__)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    MESSAGE(STATUS "current platform: Windows")
    set(FFMPEG_INC_DIR "C://ffmpeg/ffmpeg_out/include")
    set(FFMPEG_LIB_AVFORMAT "C://ffmpeg/ffmpeg_out/bin/avformat.lib")
    set(FFMPEG_LIB_AVCODEC "C://ffmpeg/ffmpeg_out/bin/avcodec.lib")
    ADD_SUBDIRECTORY(Test)
    ADD_SUBDIRECTORY(MiaoBase)
    ADD_SUBDIRECTORY(MiaoVideoFormat)
    ADD_SUBDIRECTORY(MiaoVideoCodec)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Android")
    set(CMAKE_CONFIGURATION_TYPES "Release" CACHE STRING "" FORCE)
    MESSAGE(STATUS "current platform: Android")
    set(distribution_DIR    ${CMAKE_SOURCE_DIR}/../MiaoVideoCutterAndroid/miao_video_cutter/src/main/jniLibs/armeabi-v7a)
    MESSAGE(${distribution_DIR})
    set(FFMPEG_INC_DIR      "../../MiaoVideoCutterAndroid/miao_video_cutter/src/main/jniLibs/ffmpeg/include")
    set(FFMPEG_LIB_AVFORMAT ${distribution_DIR}/libavformat.so)
    set(FFMPEG_LIB_AVCODEC  ${distribution_DIR}/libavcodec.so)
    set(FFMPEG_LIB_AVUTIL  ${distribution_DIR}/libavutil.so)
    ADD_SUBDIRECTORY(MiaoBase)
    ADD_SUBDIRECTORY(Android)
    ADD_SUBDIRECTORY(MiaoVideoFormat)
    ADD_SUBDIRECTORY(MiaoVideoCodec)
    ADD_SUBDIRECTORY(MiaoSwscale)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    MESSAGE(STATUS "current platform: Darwin")
    ADD_DEFINITIONS(-D__IOS__)
ELSE ()
    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
